Project

General

Profile

Actions

Bug #38150

closed

KernelDevice exclusive lock broken

Added by Sage Weil about 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

fcntl locks go away when any fd on the file is closed.

This can cause corruption when running ceph-osd in containers because teh pid_file lock and the fsid file locks both lock files that are not shared across containers.


Related issues 2 (0 open2 closed)

Copied to bluestore - Backport #38160: luminous: KernelDevice exclusive lock brokenRejectedShyukri ShyukrievActions
Copied to bluestore - Backport #38161: mimic: KernelDevice exclusive lock brokenRejectedActions
Actions #2

Updated by Kefu Chai about 5 years ago

  • Status changed from 12 to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38160: luminous: KernelDevice exclusive lock broken added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38161: mimic: KernelDevice exclusive lock broken added
Actions #5

Updated by Shyukri Shyukriev about 4 years ago

  • Pull request ID set to 26245
Actions #6

Updated by Niklas Hambuechen almost 4 years ago

I suspect this may have introduced a regression: #46124

Actions #7

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF