src/os/bluestore/BlockDevice.h
@@ -102,6 +102,7 @@ protected:
   uint64_t size;
   uint64_t block_size;
   bool rotational = true;
+  bool lock_exclusive = true;
 
 public:
   aio_callback_t aio_callback;
@@ -129,6 +130,10 @@ public:
 
   virtual void aio_submit(IOContext *ioc) = 0;
 
+  void set_no_exclusive_lock() {
+    lock_exclusive = false;
+  }
+  
   uint64_t get_size() const { return size; }
   uint64_t get_block_size() const { return block_size; }
 
